--- a/MediaCatalog/Views/Base.lproj/MainMenu.xib
+++ b/MediaCatalog/Views/Base.lproj/MainMenu.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17150" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="20037" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17150"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="20037"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -11,9 +11,12 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target">
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="MediaCatalog" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="qkp-Wq-me1" id="vYW-55-N5w"/>
+                <outlet property="fileTypeCounterLabel" destination="qnr-AS-bkl" id="qU3-CV-FjL"/>
+                <outlet property="importFolderButton" destination="qVI-cu-d7I" id="7Ji-Up-vyM"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
@@ -683,13 +686,130 @@
         <window title="MediaCatalog" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="480" height="360"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1415"/>
+            <rect key="contentRect" x="335" y="390" width="689" height="472"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1512" height="944"/>
             <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="360"/>
+                <rect key="frame" x="0.0" y="0.0" width="689" height="472"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <scrollView wantsLayer="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yV9-n6-FiI">
+                        <rect key="frame" x="0.0" y="0.0" width="489" height="472"/>
+                        <clipView key="contentView" id="URp-6n-Yg9">
+                            <rect key="frame" x="1" y="1" width="487" height="470"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <subviews>
+                                <collectionView id="qkp-Wq-me1">
+                                    <rect key="frame" x="0.0" y="0.0" width="487" height="158"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                                    <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" id="peL-Y0-yqc">
+                                        <size key="itemSize" width="160" height="200"/>
+                                    </collectionViewFlowLayout>
+                                    <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </collectionView>
+                            </subviews>
+                        </clipView>
+                        <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="cog-UI-dYd">
+                            <rect key="frame" x="1" y="455" width="487" height="16"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                        <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="sLe-ry-MQb">
+                            <rect key="frame" x="234" y="1" width="15" height="143"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                    </scrollView>
+                    <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hsl-Vz-p7L">
+                        <rect key="frame" x="489" y="0.0" width="200" height="472"/>
+                        <clipView key="contentView" id="epU-6X-3fK">
+                            <rect key="frame" x="1" y="1" width="198" height="470"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <subviews>
+                                <view id="bqM-fO-ZMa">
+                                    <rect key="frame" x="0.0" y="0.0" width="183" height="455"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dBw-fT-q4e">
+                                            <rect key="frame" x="0.0" y="395" width="183" height="60"/>
+                                            <subviews>
+                                                <customView translatesAutoresizingMaskIntoConstraints="NO" id="Yfu-VP-z6d">
+                                                    <rect key="frame" x="0.0" y="0.0" width="163" height="60"/>
+                                                    <subviews>
+                                                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qVI-cu-d7I">
+                                                            <rect key="frame" x="3" y="23" width="157" height="32"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="20" id="WWd-RA-BOI"/>
+                                                            </constraints>
+                                                            <buttonCell key="cell" type="push" title="Import folder" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="TRv-3v-4bE">
+                                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                                <font key="font" metaFont="system"/>
+                                                            </buttonCell>
+                                                            <connections>
+                                                                <action selector="importFolderButtonPressed:" target="Voe-Tx-rLC" id="ymt-mk-NQV"/>
+                                                            </connections>
+                                                        </button>
+                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qnr-AS-bkl">
+                                                            <rect key="frame" x="8" y="4" width="147" height="16"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="16" id="BVm-Ma-PHA"/>
+                                                            </constraints>
+                                                            <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Photo type counter" id="MFx-J6-MLj">
+                                                                <font key="font" metaFont="system"/>
+                                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                            </textFieldCell>
+                                                        </textField>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="qVI-cu-d7I" firstAttribute="top" secondItem="Yfu-VP-z6d" secondAttribute="top" constant="10" id="5XO-Sh-O2F"/>
+                                                        <constraint firstAttribute="trailing" secondItem="qVI-cu-d7I" secondAttribute="trailing" constant="10" id="7Va-Km-WrE"/>
+                                                        <constraint firstAttribute="height" constant="60" id="8Ar-zE-DlT"/>
+                                                        <constraint firstItem="qnr-AS-bkl" firstAttribute="trailing" secondItem="qVI-cu-d7I" secondAttribute="trailing" id="FkQ-gt-I0c"/>
+                                                        <constraint firstItem="qVI-cu-d7I" firstAttribute="leading" secondItem="Yfu-VP-z6d" secondAttribute="leading" constant="10" id="PfI-xG-rti"/>
+                                                        <constraint firstItem="qnr-AS-bkl" firstAttribute="top" secondItem="qVI-cu-d7I" secondAttribute="bottom" constant="10" id="X3t-9W-bv1"/>
+                                                        <constraint firstItem="qnr-AS-bkl" firstAttribute="leading" secondItem="qVI-cu-d7I" secondAttribute="leading" id="zon-yr-KiU"/>
+                                                    </constraints>
+                                                </customView>
+                                            </subviews>
+                                            <visibilityPriorities>
+                                                <integer value="1000"/>
+                                            </visibilityPriorities>
+                                            <customSpacing>
+                                                <real value="3.4028234663852886e+38"/>
+                                            </customSpacing>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="dBw-fT-q4e" firstAttribute="leading" secondItem="bqM-fO-ZMa" secondAttribute="leading" id="9pB-kN-AoP"/>
+                                        <constraint firstItem="dBw-fT-q4e" firstAttribute="top" secondItem="bqM-fO-ZMa" secondAttribute="top" id="ERw-D8-rcA"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="dBw-fT-q4e" secondAttribute="bottom" id="Wfk-Sj-upw"/>
+                                        <constraint firstAttribute="trailing" secondItem="dBw-fT-q4e" secondAttribute="trailing" id="fhM-fn-Pri"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                        </clipView>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="200" id="ebS-Qb-1ea"/>
+                        </constraints>
+                        <scroller key="horizontalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="ghT-Kd-RLb">
+                            <rect key="frame" x="1" y="455" width="198" height="16"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                        <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="GqW-3b-sDt">
+                            <rect key="frame" x="183" y="1" width="16" height="470"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                    </scrollView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="Hsl-Vz-p7L" firstAttribute="leading" secondItem="yV9-n6-FiI" secondAttribute="trailing" id="9QK-Ov-bdH"/>
+                    <constraint firstItem="Hsl-Vz-p7L" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" id="Ow9-XE-RtK"/>
+                    <constraint firstAttribute="bottom" secondItem="Hsl-Vz-p7L" secondAttribute="bottom" id="anG-h2-oDh"/>
+                    <constraint firstAttribute="bottom" secondItem="yV9-n6-FiI" secondAttribute="bottom" id="jb7-cv-ZlB"/>
+                    <constraint firstAttribute="trailing" secondItem="Hsl-Vz-p7L" secondAttribute="trailing" id="jcz-iz-aQH"/>
+                    <constraint firstItem="yV9-n6-FiI" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" id="ks4-Ei-7yX"/>
+                    <constraint firstItem="yV9-n6-FiI" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" id="tQN-V4-y8x"/>
+                </constraints>
             </view>
-            <point key="canvasLocation" x="200" y="400"/>
+            <point key="canvasLocation" x="213.5" y="456"/>
         </window>
     </objects>
 </document>
