--- a/MediaCatalog/Views/ViewerViewController.xib
+++ b/MediaCatalog/Views/ViewerViewController.xib
@@ -10,6 +10,7 @@
                 <outlet property="closePhotoButton" destination="IU3-ge-MJr" id="zCK-cI-u4H"/>
                 <outlet property="collectionView" destination="tLJ-h7-9xM" id="J7g-2r-sCJ"/>
                 <outlet property="collectionViewScrollView" destination="Cb3-on-p7N" id="gnW-PZ-pyk"/>
+                <outlet property="detectFacesButton" destination="QeN-e6-Dkl" id="jPS-P4-pC6"/>
                 <outlet property="imageView" destination="bbb-0J-N2P" id="ruD-vP-quy"/>
                 <outlet property="importFolderButton" destination="VfI-v7-Lwa" id="TCY-HH-ffY"/>
                 <outlet property="importedFilesTypesLabel" destination="ufh-on-Stn" id="cp4-Qb-OSZ"/>
@@ -62,6 +63,19 @@
                                 <action selector="closePhotoButtonTapped:" target="-2" id="3GM-iI-fqk"/>
                             </connections>
                         </button>
+                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QeN-e6-Dkl">
+                            <rect key="frame" x="23" y="425" width="134" height="32"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="120" id="VR5-Ag-epj"/>
+                            </constraints>
+                            <buttonCell key="cell" type="push" title="Detect faces" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="KS6-yU-TZn">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="detectFacesButtonTapped:" target="-2" id="0Bh-0n-9Y0"/>
+                            </connections>
+                        </button>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ufh-on-Stn">
                             <rect key="frame" x="28" y="20" width="124" height="20"/>
                             <constraints>
@@ -81,10 +95,12 @@
                         <constraint firstItem="PgU-0F-UGm" firstAttribute="top" secondItem="mob-LP-Vui" secondAttribute="bottom" constant="20" id="Fp0-OI-bew"/>
                         <constraint firstItem="ufh-on-Stn" firstAttribute="centerX" secondItem="QkP-80-bxS" secondAttribute="centerX" id="PMG-Ng-GNs"/>
                         <constraint firstAttribute="width" constant="180" id="R1w-kB-3K6"/>
+                        <constraint firstItem="QeN-e6-Dkl" firstAttribute="top" secondItem="IU3-ge-MJr" secondAttribute="bottom" constant="15" id="YvH-LP-ufd"/>
                         <constraint firstItem="IU3-ge-MJr" firstAttribute="centerX" secondItem="QkP-80-bxS" secondAttribute="centerX" id="b9A-DD-CY0"/>
                         <constraint firstAttribute="bottom" secondItem="ufh-on-Stn" secondAttribute="bottom" constant="20" id="gg7-hZ-Yfj"/>
                         <constraint firstItem="PgU-0F-UGm" firstAttribute="centerX" secondItem="QkP-80-bxS" secondAttribute="centerX" id="q3J-X1-vfL"/>
                         <constraint firstItem="mob-LP-Vui" firstAttribute="leading" secondItem="QkP-80-bxS" secondAttribute="leading" id="qCd-pa-0E6"/>
+                        <constraint firstItem="QeN-e6-Dkl" firstAttribute="centerX" secondItem="QkP-80-bxS" secondAttribute="centerX" id="tRB-fU-uWS"/>
                         <constraint firstItem="mob-LP-Vui" firstAttribute="top" secondItem="QkP-80-bxS" secondAttribute="top" constant="40" id="uId-mH-oKW"/>
                     </constraints>
                 </customView>
